# fast-csv-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
