[package]
name = "fast-csv-generator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Fast way to generate csv file"
repository = "https://github.com/Zcb991/fast-csv-generator"
homepage = "https://github.com/Zcb991/fast-csv-generator"

[dependencies]
xlsxwriter = "0.6.1"     # 或检查最新版本
fastrand = "2.0.0"
clap = { version = "4.5.27", features = ["derive"] }
